# gnonogram-tools

./: README.md  meson.build
data/: com.github.jeremypw.gnonogram-tools.meson.in.appdata.xml  com.github.jeremypw.gnonogram-tools.meson.in.desktop  meson.build  post_uninstall.py.in
data/schemas/: com.github.jeremypw.gnonogram-tools.gschema.xml
debian/: changelog  control  copyright  rules
meson/: post_install.py
po/: POTFILES
po/extra/: POTFILES
src/: Application.vala  Controller.vala  View.vala
src/tools/: ClueEntryView.vala  Img2GnoView.vala  ToolInterface.vala
src/tools/widgets/: DimensionGrid.vala  SettingGrid.vala  SolutionPopover.vala
